--- a/scss/components/_group.scss
+++ b/scss/components/_group.scss
@@ -15,7 +15,7 @@
     display: inline-flex;
     position: relative;
     width: 100%;
-    margin-bottom: var(#{$css-var-prefix}spacing);
+    margin-block-end: var(#{$css-var-prefix}spacing);
     border-radius: var(#{$css-var-prefix}border-radius);
     box-shadow: var(#{$css-var-prefix}group-box-shadow, 0 0 0 rgba(0, 0, 0, 0));
     vertical-align: middle;
@@ -36,7 +36,7 @@
     > details {
       position: relative;
       flex: 1 1 auto;
-      margin-bottom: 0;
+      margin-block-end: 0;
 
       &:not(:first-child) {
         margin-inline-start: 0;
