--- a/scss/components/_modal.scss
+++ b/scss/components/_modal.scss
@@ -66,7 +66,7 @@
 
       > header {
         > * {
-          margin-bottom: 0;
+          margin-block-end: 0;
         }
 
         #{$close-selector} {
@@ -82,7 +82,7 @@
 
         button,
         [role="button"] {
-          margin-bottom: 0;
+          margin-block-end: 0;
 
           &:not(:first-of-type) {
             margin-inline-start: calc(var(#{$css-var-prefix}spacing) * 0.5);
@@ -96,7 +96,7 @@
         width: 1rem;
         height: 1rem;
         margin-block-start: calc(var(#{$css-var-prefix}spacing) * -1);
-        margin-bottom: var(#{$css-var-prefix}spacing);
+        margin-block-end: var(#{$css-var-prefix}spacing);
         margin-inline-start: auto;
         border: none;
         background-image: var(#{$css-var-prefix}icon-close);
