--- a/scss/components/_tab.scss
+++ b/scss/components/_tab.scss
@@ -25,14 +25,14 @@
   #{$parent-selector} [role="tablist"] {
     display: flex;
     flex-wrap: wrap; // make sure it wraps
-    padding-bottom: 0;
+    padding-block-end: 0;
 
     > button[role="tab"] {
       flex-grow: 1;
       order: 1; // Put the labels first
       padding: calc(var(#{$css-var-prefix}spacing) * 0.625);
       border: 0;
-      border-bottom: 1px solid var(#{$css-var-prefix}primary-background);
+      border-block-end: 1px solid var(#{$css-var-prefix}primary-background);
       border-bottom-right-radius: 0;
       border-bottom-left-radius: 0;
       background: transparent;
@@ -77,7 +77,7 @@
         display: none;
       }
       > *:last-of-type {
-        margin-bottom: 0;
+        margin-block-end: 0;
       }
     }
   }
