--- a/scss/forms/_basics.scss
+++ b/scss/forms/_basics.scss
@@ -132,7 +132,7 @@
   #{$parent-selector} fieldset {
     width: 100%;
     margin: 0;
-    margin-bottom: var(#{$css-var-prefix}spacing);
+    margin-block-end: var(#{$css-var-prefix}spacing);
     padding: 0;
     border: 0;
   }
@@ -141,13 +141,13 @@
   #{$parent-selector} *:not([role="group"]) > label,
   #{$parent-selector} fieldset:not([role="group"]) > legend {
     display: block;
-    margin-bottom: calc(var(#{$css-var-prefix}spacing) * 0.375);
+    margin-block-end: calc(var(#{$css-var-prefix}spacing) * 0.375);
     color: var(#{$css-var-prefix}color);
     font-weight: var(#{$css-var-prefix}form-label-font-weight, var(#{$css-var-prefix}font-weight));
   }
 
   #{$parent-selector} fieldset:not([role="group"]) > legend {
-    margin-bottom: calc(var(#{$css-var-prefix}spacing) * 0.5);
+    margin-block-end: calc(var(#{$css-var-prefix}spacing) * 0.5);
   }
 
   // Blocks, 100%
@@ -400,7 +400,7 @@
   #{$parent-selector} textarea,
   #{$parent-selector} [role="group"] > label,
   #{$parent-selector} [role="group"] > legend {
-    margin-bottom: var(#{$css-var-prefix}spacing);
+    margin-block-end: var(#{$css-var-prefix}spacing);
   }
 
   // Select
@@ -471,7 +471,7 @@
       display: block;
       width: 100%;
       margin-block-start: calc(var(#{$css-var-prefix}spacing) * -0.75);
-      margin-bottom: var(#{$css-var-prefix}spacing);
+      margin-block-end: var(#{$css-var-prefix}spacing);
       color: var(#{$css-var-prefix}muted-color);
     }
     &[aria-invalid="false"] {
