--- a/scss/forms/_floating.scss
+++ b/scss/forms/_floating.scss
@@ -7,7 +7,7 @@
 
   #{$parent-selector} section[role="form"] {
     position: relative;
-    margin-bottom: 0;
+    margin-block-end: 0;
 
     > input::placeholder,
     > textarea::placeholder {
